- not important for now: new file toolbar button / file menu entry should show the new file dialog;
    it is usable as it is
- fix build on kubuntu 64 bit, for all combinations of installed/not installed state of gpsim/glib
    - when both (gpsim-dev and libglib2.0-dev) are installed or both are uninstalled, then ktechlab compiles and runs fine (kubunt 16.04)
- fixed: when placing a component with slider, and clicking on the slider, the
  slider follows the mouse cursor even after it is released; this is annyoing
* release 0.40.0
- use QMenu instead of Q3PopupMenu
- use QTextEdit instead of K3TextEdit
- fix export as image to not generate black rectangle around exported images
- do not depend ot KDE3 support libraries, only on KDE4 libraries; Qt3Support is still needed
- fix crash on Redo in Pin Map Editor
- fix UI files to not use Q3* functionality
- ported item selector
    - Q3ListView -> QTreeWidget
- ported project manager
    - Q3ListView -> QTreeWidget
- Q3PaintDeviceMetrics -> QPrinter->pageRect()
- canvas.h: split up huge file
- copy the Q3ScrollView into source tree and use that, as internal source code
- use Q3PointArray -> QPolygon
- use Q3ListView -> QTableWidget
- Q3ScrollView -> use internal copy for now
- Q3Hbox -> QWidget, QHBoxLayout
- Q3SimpleRichText -> QTextEdit
- use Q3PtrVector -> QVector< T * >
- disable explicit double buffering when drawing; should fix build for OSX
- ktlq3support:
    - removed dependency on:
        - q3ptrdict
        - q3ptrlist
- removed Qt3 dependencies
    - enable compilation warnings on deprecated Qt functionalities, remove those
    - read this: http://doc.qt.io/qt-4.8/porting4.html
- got rid of Qt3Support dependency
- integrated changes needed for build on OS X, see emails
- fix: on 'no item selected', the old properties still remain there
- fixed resizing of QTextEdit to minimal needed size for rendering