@@ -182,3 +182,5 @@ Changes between Qt3 and Qt4 port (to be completed)
 - integrated changes needed for build on OS X, see emails
 - fix: on 'no item selected', the old properties still remain there
 - fixed resizing of QTextEdit to minimal needed size for rendering
+- validated that rich text editor continues to work correctly (see the context help of the components)
+    - in editing mode pictures did not appear; fixed now
